<resources>
    <string name="app_name">PlayList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty_title">Title field cannot be empty</string>
    <string name="empty_artist">Artist field cannot be empty</string>
    <string name="empty_album">Album field cannot be empty</string>
    <string name="add_new_song">Add a new song:</string>
    <string name="title">Title:</string>
    <string name="album">Album:</string>
    <string name="artist">Artist:</string>
    <string name="add">Add</string>
</resources>
